@@ -41,6 +41,8 @@ New user-visible features
    - Automatic Handover trigger based on RRC UE measurement reports
 - IPv6 can now detect and use Path-MTU. See 
   examples/ipv6/fragmentation-ipv6-two-MTU.cc for an example.
+- Radvd application have a new Helper. See the updated 
+  examples/ipv6/radvd.cc for an example.
 
 Bugs fixed
 ----------
@@ -67,6 +69,7 @@ Bugs fixed
 - Bug 1720 - IPv6 Fragmentation cause crashes
 - Bug 1721 - Path MTU isn't handled properly
 - Bug 1727 - Ping6 should use a proper source address
+- Bug 1728 - Radvd application is missing an Helper
 - Bug 1731 - lte-phy-error-model passes unexpectedly
 - Bug 1742 - IPv6 HbH and Dst Extension Header size is not correctly calculated
 - Bug 1752 - RadvdInterface m_defaultLifeTime is set to milliseconds instead of seconds
